01.example/16.gitlab/00.install/istio_config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitlab-gateway
  namespace: cicd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 22
      name: ssh-gitlab
      protocol: TCP
    hosts:
    - gitlab.${INGRESS_DOMAIN}
  - port:
      number: 80
      name: http-gitlab
      protocol: HTTP
    hosts:
    - gitlab.${INGRESS_DOMAIN}
    - minio.${INGRESS_DOMAIN}
    - registry.${INGRESS_DOMAIN}
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-gitlab
      protocol: HTTPS
    hosts:
    - gitlab.${INGRESS_DOMAIN}
    - minio.${INGRESS_DOMAIN}
    - registry.${INGRESS_DOMAIN}
    tls:
      credentialName: gitlab-gw-cert
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-ssh-virtual-service
  namespace: cicd
spec:
  hosts:
  - gitlab.${INGRESS_DOMAIN}
  gateways:
  - gitlab-gateway
  tcp:
  - match:
    - port: 22
    route:
    - destination:
        host: gitlab-gitlab-shell.cicd.svc.cluster.local
        port:
          number: 22
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-http-virtual-service
  namespace: cicd
spec:
  hosts:
  - gitlab.${INGRESS_DOMAIN}
  gateways:
  - gitlab-gateway
  http:
  - match:
    - uri:
        prefix: /admin/sidekiq
    route:
    - destination:
        host: gitlab-webservice-default.cicd.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: gitlab-webservice-default.cicd.svc.cluster.local
        port:
          number: 8181
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-minio-virtual-service
  namespace: cicd
spec:
  hosts:
  - minio.${INGRESS_DOMAIN}
  gateways:
  - gitlab-gateway
  http:
  - route:
    - destination:
        host: gitlab-minio-svc.cicd.svc.cluster.local
        port:
          number: 9000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-registry-virtual-service
  namespace: cicd
spec:
  hosts:
  - registry.${INGRESS_DOMAIN}
  gateways:
  - gitlab-gateway
  http:
  - route:
    - destination:
        host: gitlab-registry.cicd.svc.cluster.local
        port:
          number: 5000
